fixed infinite horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,23 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-/*slider*/
-
-/* @keyframes scroll {
-  0% {
-    transform: translateX(10%);
-  }
-  100% {
-    transform: translateX(-60%);
-  }
-}
-
-.animate-scroll {
-  animation: scroll 10s linear infinite;
-} */
-
 /*Pricing*/
 @keyframes rotate-border {
   0% {
@@ -60,9 +43,6 @@
   z-index: 1;
   pointer-events: none;
 }
-
-
-
 
 
 :root {
@@ -164,3 +144,43 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+/* Horizontal scroller */
+
+.scroller {
+  -webkit-mask: linear-gradient(
+    90deg,
+    transparent,
+    white 10%,
+    white 90%,
+    transparent
+  );
+  mask: linear-gradient(90deg, transparent, white 10%, white 90%, transparent);
+}
+
+.scroller__inner {
+  animation: scroll var(--_animation-duration, 40s)
+    var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction="right"] {
+  --_animation-direction: reverse;
+}
+
+.scroller[data-direction="left"] {
+  --_animation-direction: forwards;
+}
+
+.scroller[data-speed="fast"] {
+  --_animation-duration: 10s;
+}
+
+.scroller[data-speed="slow"] {
+  --_animation-duration: 60s;
+}
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 0.5rem));
+  }
+}
+
+/* Horizontal scroller end */
